--- a/weblog/_posts/2020-10-10-css-notes.md
+++ b/weblog/_posts/2020-10-10-css-notes.md
@@ -2,6 +2,7 @@
 title: Notes for CSS
 tags: [CSS]
 excerpt: CSS 问题记录
+permalink: /weblog/css-notes
 ---
 
 Firefox 中，`html` 规定语言为 `CJK` 后，`text-align: justify` 才对中文起效；webkit 用 `text-justify: inter-ideograph`。
