--- a/weblog/_posts/2020-10-10-css-notes.md
+++ b/weblog/_posts/2020-10-10-css-notes.md
@@ -1,17 +1,31 @@
 ---
 title: Notes for CSS
 tags: [CSS]
-excerpt: CSS 问题记录
+excerpt: CSS 问题记录。
 permalink: /weblog/css-notes
 ---
 
-Firefox 中，`html` 规定语言为 `CJK` 后，`text-align: justify` 才对中文起效；webkit 用 `text-justify: inter-ideograph`。
+### `@font-face`
 
-Mobile Safari 图片在 `flexbox` 里就不会自动高度了。
+`unicode-range` 可用于区分 CJK 及 latin 字体。
 
-非触摸屏 `media query`：`@media(hover: hover) and (pointer: fine) {}` [^1]。
+且有[这样的操作](https://github.com/jonathantneal/system-font-css/blob/gh-pages/system-font.css)。
 
-先前遇到的问题仿佛是 ligature 造成的；实在不行可以使用：[^2]
+须知 `-apple-system` 不能用在缩写式 `font` 开头，因会被误认为变量。
+
+### `@media`
+
+非触摸屏：`@media(hover: hover) and (pointer: fine) {}`（[参见](https://hover-pointer-media-query.glitch.me/ "Test your media queries")）。
+
+### `display`
+
+#### `display: flex;`
+
+Mobile Safari 图片在 `flexbox` 里不自动高度。
+
+### `font-variant-ligatures`
+
+`ligature` 可能导致 `letter-spacing`无法体现，或有必要设置为 `none`；其简写为 `font-feature-settings`（[参见](https://stackoverflow.com/questions/55097925/ "Problems with using google fonts in iphone")）：
 
 ``` CSS
 webkit-font-feature-settings: "liga", "dlig";
@@ -20,5 +34,13 @@ webkit-font-feature-settings: "liga", "dlig";
 font-feature-settings: "liga", "dlig";
 ```
 
-[^1]: <https://hover-pointer-media-query.glitch.me/>
-[^2]: <https://stackoverflow.com/questions/55097925/>
+### `scroll-behavior`
+
+`scroll-behavior: smooth;` 与 jQuery 动画效果冲突。
+
+### `text-align`
+
+#### `text-align: justify; text-justify: inter-ideograph;`
+
+Firefox：`lang="{CJK}"` & `text-align: justify`；
+WebKit：`text-justify: inter-ideograph`。
