--- a/weblog/_posts/2020-10-10-css-notes.md
+++ b/weblog/_posts/2020-10-10-css-notes.md
@@ -4,7 +4,7 @@ tags: [CSS]
 excerpt: CSS 问题记录。
 permalink: /weblog/css-notes
 ---
-
+<!-- more -->
 ### `@font-face`
 
 `unicode-range` 可用于区分 CJK 及 latin 字体。
