--- a/weblog/_posts/2020-10-10-css-notes.md
+++ b/weblog/_posts/2020-10-10-css-notes.md
@@ -29,7 +29,7 @@ Mobile Safari 图片在 `flexbox` 里不自动高度。
 
 `ligature` 可能导致 `letter-spacing`无法体现，或有必要设置为 `none`；其简写为 `font-feature-settings`（[参见](https://stackoverflow.com/questions/55097925/ "Problems with using google fonts in iphone")）：
 
-``` CSS
+``` css
 webkit-font-feature-settings: "liga", "dlig";
 -moz-font-feature-settings: "liga=1, dlig=1";
 -ms-font-feature-settings: "liga", "dlig";
